Refactor code to code style